Refactorings for version 2.0